[package]
name = "lunar"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
serde = { version = "1.0.114" }
yew = { git = "https://github.com/yewstack/yew.git", features = ["csr"] }
yewdux = { git = "https://github.com/intendednull/yewdux.git" }
web-sys = { version = "0.3", features = [
    "HtmlInputElement",
    "Window",
    "Event",
] }
js-sys = "*"
wasm-bindgen = "0.2"
enum-display-derive = "0.1.1"
getrandom = { version = "0.2", features = ["js"] }
rand = "*"
chrono = { version = "0.4.20", features = ["serde"] }
strum = { version = "0.24", features = ["derive"] }
strum_macros = "0.24"
ternop = "*"
lazy_static = "*"
